--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -14,7 +14,7 @@
 
 $primary   : #b9004d
 $secondary : #4f26a6
-$accent    : #9C27B0
+$accent    : #8c0446
 
 $dark      : #1D1D1D
 $dark-page : #121212
