--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -15,3 +15,11 @@ body
 iframe
   margin: 8px
   max-width: 100%
+
+
+.text-h7
+  display: flex
+  margin-block: 24px
+  color: #0006
+  justify-content: center
+
