--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -13,8 +13,8 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #b9004d
-$secondary : #4f26a6
-$accent    : #8c0446
+$secondary : #59438a
+$accent    : #8c0471
 
 $dark      : #1D1D1D
 $dark-page : #121212
