--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -16,8 +16,8 @@ $primary   : #b9004d
 $secondary : #59438a
 $accent    : #8c0471
 
-$dark      : #1D1D1D
-$dark-page : #121212
+$dark      : #444
+$dark-page : #333
 
 $positive  : #21BA45
 $negative  : #C10015
