add: base de datos

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -5,6 +5,9 @@ a
   text-decoration: none
   transition: 0.2s
 
+.text-glass
+  color: var(--glass)
+
 .index-card
   width: 100%
   max-width: 600px
