--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -14,7 +14,7 @@ a
   text-align: center
 body
   font-size: 14pt
-  
+
 iframe
   margin: 8px
   max-width: 100%
@@ -23,6 +23,27 @@ iframe
 .text-h7
   display: flex
   margin-block: 24px
-  color: #0006
+  color: #5007
   justify-content: center
+  background: $secondary-gradient
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
 
+.bg-primary-gradient
+  background: $primary-gradient
+.bg-secondary-gradient
+  background: $secondary-gradient
+.bg-accent-gradient
+  background: $accent-gradient
+.text-primary-gradient
+  background: $primary-gradient
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+.text-secondary-gradient
+  background: $secondary-gradient
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
+.text-accent-gradient
+  background: $accent-gradient
+  -webkit-background-clip: text
+  -webkit-text-fill-color: transparent
