--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -13,8 +13,11 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #b9004d
+$primary-gradient : linear-gradient(to bottom right,#b9004d,#8c0471)
 $secondary : #59438a
+$secondary-gradient : linear-gradient(to bottom right,#8c0471,#59438a)
 $accent    : #8c0471
+$accent-gradient : linear-gradient(to bottom right,#59438a,#c403ff)
 
 $dark      : #444
 $dark-page : #333
@@ -25,3 +28,6 @@ $info      : #31CCEC
 $warning   : #F2C037
 $glass     : #fff3
 $dark-glass : #0003
+
+
+//QUASAR OTHERS
